# registrationViewer

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  myQSS.qss  path.txt  registrationViewer.pro  test.cpp
AntsProcessBridge/: CMakeLists.txt  IPCTest.cpp
AntsProcessBridge/IPCTest/: client.cpp  server.cpp
Controls/: AbsControl.cpp  AbsControl.h  AbsSingleWidgetControl.cpp  AbsSingleWidgetControl.h  BaseControl.cpp  BaseControl.h  ButtonControl.cpp  ButtonControl.h  CMakeLists.txt  CheckboxControl.cpp  CheckboxControl.h  ComboBoxControl.cpp  ComboBoxControl.h  CompositeControl.cpp  CompositeControl.h  ControlWrapper.cpp  ControlWrapper.h  DirectoryFieldControl.cpp  DirectoryFieldControl.h  MultiTypeControl.cpp  MultiTypeControl.h  SingleControlWrapper.cpp  SingleControlWrapper.h  SliderControl.cpp  SliderControl.h  SpinBoxControl.cpp  SpinBoxControl.h  TripleSpinControl.cpp  TripleSpinControl.h  test.cpp
Nodes/: AbsNode.cpp  AbsNode.h  AntsAffineRegistrationNode.cpp  AntsAffineRegistrationNode.h  AntsRigidRegistrationNode.cpp  AntsRigidRegistrationNode.h  AntsSyNRegistrationNode.cpp  AntsSyNRegistrationNode.h  CMakeLists.txt  DemoExecutor.cpp  DemoExecutor.h  NodeManager.cpp  NodeManager.h  NodeWrapper.cpp  NodeWrapper.h  test.cpp
Nodes/Tests/: TestNode.cpp  TestNode.h  execution.cpp  execution.h
UI/: ImageShownContainer.cpp  ImageShownContainer.h  ImageShownController.cpp  ImageShownController.h  ImageShownWidget.cpp  ImageShownWidget.h  NPushButtonExtend.cpp  NPushButtonExtend.h  ProcessNodesContainer.cpp  ProcessNodesContainer.h
Utils/: exceptions.cpp  exceptions.h  logger.cpp  logger.h  strings.cpp  strings.h
