include_directories(../Utils)
aux_source_directory(../Utils UTILS_SRC)
aux_source_directory(. BASE_NODES)
aux_source_directory(Tests TEST_NODES)
aux_source_directory(AntsCmdLineNodes ANTS_CMD_NODES)
aux_source_directory(../Controls CONTROLS_SRC)
list(REMOVE_ITEM CONTROLS_SRC ../Controls/test.cpp)
message("NODES: removing test.cpp from controls...")
message(${CONTROLS_SRC})
message("Building Nodes...")
add_library(nodes ${BASE_NODES} ${TEST_NODES} ${ANTS_CMD_NODES})
add_executable(NodesTest test.cpp ${BASE_NODES} ${TEST_NODES} ${ANTS_CMD_NODES} ${CONTROLS_SRC} ${UTILS_SRC})
#link_directories(../cmake-build-debug/Controls)
#target_link_libraries(NodesTest controls)